카지노 페이지 추가

--- a/_left_menu.html
+++ b/_left_menu.html
@@ -278,43 +278,43 @@
                         </div>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/casino/slots.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Slots"></use></svg>
                             <span class="font-medium">슬롯</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/casino/live.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_LiveCasino"></use></svg>
                             <span class="font-medium">라이브카지노</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/casino/hot.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_HotGame"></use></svg>
                             <span class="font-medium">Hot</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/casino/new.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_NewReleases"></use></svg>
                             <span class="font-medium">New 출시</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/casino/feature_buy.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_FeatureBuy-in"></use></svg>
                             <span class="font-medium">보너스 바이</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/casino/blackjack.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Blackjack"></use></svg>
                             <span class="font-medium">Blackjack</span>
                         </a>
                     </div>
                     <div class="menu_list bg-back">
-                        <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                        <a href="/bcGame/casino/table_game.html" class="flex items-center gap-5 h-full pl-4">
                             <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_TableGame"></use></svg>
                             <span class="font-medium">테이블 게임</span>
                         </a>
