--- a/casino/live.html
+++ b/casino/live.html
@@ -58,7 +58,7 @@
                             <div class="inline-flex items-center gap-2 p-2 px-4 bg-backlight rounded">
                                 <span>카지노</span>
                                 <svg class="w-3 h-3 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg>
-                                <b class="font-bold text-tit">슬롯</b>
+                                <b class="font-bold text-tit">라이브</b>
                             </div>
                             <div class="form-check form-switch"> 
                                 <input id="view_check" class="form-check-input small_check" type="checkbox"> 
@@ -210,7 +210,7 @@
                     <ul class="casino_list mt-4">
                         
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_1.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_1.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -234,7 +234,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_2.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_2.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -258,7 +258,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_3.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_3.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -282,7 +282,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_4.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_4.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -306,7 +306,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_5.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_5.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -330,7 +330,7 @@
                           </div>
                       </li>
                       <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_6.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_6.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -354,7 +354,7 @@
                           </div>
                       </li>
                       <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_7.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_7.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -378,7 +378,7 @@
                           </div>
                       </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_8.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_8.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -402,7 +402,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_9.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_9.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -426,7 +426,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_10.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_10.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -450,7 +450,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_11.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_11.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -473,7 +473,7 @@
                                 </div>
                             </div>
                         </li><li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_1.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_1.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -497,7 +497,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_2.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_2.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -521,7 +521,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_3.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_3.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -545,7 +545,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_4.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_4.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -569,7 +569,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_5.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_5.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -593,7 +593,7 @@
                           </div>
                       </li>
                       <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_6.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_6.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -617,7 +617,7 @@
                           </div>
                       </li>
                       <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_7.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_7.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -641,7 +641,7 @@
                           </div>
                       </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_8.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_8.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -665,7 +665,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_9.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_9.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -689,7 +689,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_10.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_10.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -713,7 +713,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_11.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/live_11.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
