--- a/casino/feature_buy.html
+++ b/casino/feature_buy.html
@@ -58,7 +58,7 @@
                             <div class="inline-flex items-center gap-2 p-2 px-4 bg-backlight rounded">
                                 <span>카지노</span>
                                 <svg class="w-3 h-3 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg>
-                                <b class="font-bold text-tit">슬롯</b>
+                                <b class="font-bold text-tit">보너스 바이</b>
                             </div>
                             <div class="form-check form-switch"> 
                                 <input id="view_check" class="form-check-input small_check" type="checkbox"> 
@@ -66,24 +66,6 @@
                             </div>
                         </div>
                         <div class="flex flex-wrap items-center gap-x-6 gap-y-2">
-                            <div class="flex items-center gap-3">
-                                <p>정렬 기준</p>
-                                <div class="w-44">
-                                    <div class="custom_select flex-1">
-                                        <button class="btn h-10 flex px-4 items-center justify-between border-none bg-modaldark">
-                                            <span>좋아 할만한</span>
-                                            <i><svg class="w-3.5 h-3.5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></i>
-                                        </button>
-                                        <ul class="overflow-y-auto scrollbar p-2 shadow-basic rounded bg-modaldark text-sub">
-                                            <li class="py-2 on">좋아 할만한</li>
-                                            <li class="py-2">인기</li>
-                                            <li class="py-2">A-Z</li>
-                                            <li class="py-2">Z-A</li>
-                                            <li class="py-2">New</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="flex items-center gap-3">
                                 <p>제공사</p>
                                 <div class="w-44">
@@ -210,7 +192,7 @@
                     <ul class="casino_list mt-4">
                         
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_1.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_1.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -234,7 +216,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_2.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_2.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -258,7 +240,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_3.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_3.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -282,7 +264,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_4.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_4.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -306,7 +288,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_5.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_5.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -330,7 +312,7 @@
                           </div>
                       </li>
                       <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_6.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_6.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -354,7 +336,7 @@
                           </div>
                       </li>
                       <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_7.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_7.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -378,7 +360,7 @@
                           </div>
                       </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_8.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_8.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -402,7 +384,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_9.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_9.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -426,7 +408,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_10.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_10.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -450,7 +432,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_11.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_11.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -473,7 +455,7 @@
                                 </div>
                             </div>
                         </li><li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_1.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_1.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -497,7 +479,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_2.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_2.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -521,7 +503,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_3.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_3.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -545,7 +527,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_4.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_4.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -569,7 +551,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_5.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_5.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -593,7 +575,7 @@
                           </div>
                       </li>
                       <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_6.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_6.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -617,7 +599,7 @@
                           </div>
                       </li>
                       <li class="cursor-pointer bg-list rounded">
-                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_7.avif" alt=""></a>
+                          <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_7.avif" alt=""></a>
                           <div class="flex items-center justify-between px-2 py-3">
                               <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                               <div class="casino_gameinfo ">
@@ -641,7 +623,7 @@
                           </div>
                       </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_8.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_8.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -665,7 +647,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_9.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_9.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -689,7 +671,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_10.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_10.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
@@ -713,7 +695,7 @@
                             </div>
                         </li>
                         <li class="cursor-pointer bg-list rounded">
-                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/slot_11.avif" alt=""></a>
+                            <a href="javascript:;"><img src="/bcGame/dist/custom_img/casino/feature_buy_11.avif" alt=""></a>
                             <div class="flex items-center justify-between px-2 py-3">
                                 <p class="font-medium truncate"><a href="javascript:;">BC Originals</a></p>
                                 <div class="casino_gameinfo ">
