--- a/_modal.html
+++ b/_modal.html
@@ -4230,7 +4230,7 @@
                         <p class="text-tit font-extrabold text-base">입금</p>
                         <button class="basic-hover px-2 ml-4" data-tw-dismiss="modal"><svg class="w-4 h-4 close_btn cursor-pointer hover:-rotate-90 duration-500 transition-all"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Close"></use></svg></button>
                     </div>
-                    <div class="px-5 pb-3">
+                    <div class="sm:px-5 pb-3">
                         <ul class="nav nav-boxed-tabs bg-slate-200 dark:bg-back" role="tablist">
                             <li id="deposit-1-tab" class="nav-item w-full" role="presentation">
                                 <button class="w-full h-9 active" data-tw-toggle="pill" data-tw-target="#deposit-tab-1" type="button" role="tab" aria-controls="deposit-tab-1" aria-selected="false">크립토</button>
@@ -4248,7 +4248,7 @@
   
   
                 <div class="tab-content overflow-y-auto scrollbar h-auto sm:h-[680px] text-sub">
-                    <div id="deposit-tab-1" class="tab-pane leading-relaxed p-6 px-10 active" role="tabpanel" aria-labelledby="deposit-1-tab">
+                    <div id="deposit-tab-1" class="tab-pane leading-relaxed p-6 sm:px-10 active" role="tabpanel" aria-labelledby="deposit-1-tab">
                         <div>입금화폐</div>
                         <div class="flex flex-wrap gap-1 items-center mt-1 font-medium">
                             <button class="flex items-center h-7 border border-solid border-slate-300 px-3 rounded-3xl hover:bg-slate-300 hover:bg-opacity-50"><img class="w-3.5 mr-1" src="/bcGame/dist/custom_img/coin/USDT.webp" /> USDT</button>
@@ -4424,7 +4424,7 @@
                             참고: <span class="text-tit">BTC만 이 주소로 보내십시오. 코인은 2번의 네트워크 확인 후에 입금됩니다.</span>
                         </div>
                     </div>
-                    <div id="deposit-tab-2" class="tab-pane leading-relaxed p-6" role="tabpanel" aria-labelledby="deposit-2-tab">
+                    <div id="deposit-tab-2" class="tab-pane leading-relaxed p-6 sm:px-10" role="tabpanel" aria-labelledby="deposit-2-tab">
                         <div class="flex items-center justify-between">
                             <p>입금 화폐</p>
                             <div class="custom_select2 w-32">
@@ -4712,7 +4712,7 @@
                         </div>
                         
                     </div>
-                    <div id="deposit-tab-3" class="tab-pane leading-relaxed p-6" role="tabpanel" aria-labelledby="deposit-3-tab">
+                    <div id="deposit-tab-3" class="tab-pane leading-relaxed p-6 sm:px-10" role="tabpanel" aria-labelledby="deposit-3-tab">
                         
                         <div>지불을</div>
                         <div class="flex items-center justify-between mt-1 bg-modaldark p-2 rounded">
