--- a/casino/picks_for_you.html
+++ b/casino/picks_for_you.html
@@ -50,7 +50,7 @@
             <!-- ** 탑바 끝 ** -->
 
             <!-- ** 내용시작 ** -->
-            <div class="container_wrap" style="height:1000px;">
+            <div class="container_wrap">
 
                 <div class="container py-8">
                     <div class="inline-flex items-center gap-2 p-2 px-4 bg-backlight rounded">
