--- a/casino/table_game.html
+++ b/casino/table_game.html
@@ -50,7 +50,7 @@
             <!-- ** 탑바 끝 ** -->
 
             <!-- ** 내용시작 ** -->
-            <div class="container_wrap" style="height:1000px;">
+            <div class="container_wrap">
 
                 <div class="container py-8">
                     <div class="flex flex-wrap items-center justify-between gap-2">
