--- a/index_logout.html
+++ b/index_logout.html
@@ -50,7 +50,7 @@
             <!-- ** 탑바 끝 ** -->
 
             <!-- ** 내용시작 ** -->
-            <div class="container_wrap" style="height:1000px;">
+            <div class="container_wrap">
 
                  <!-- BEGIN: Custom Tooltip Toggle --> 
                 
