카지노 메인 진행중

--- a/_left_menu.html
+++ b/_left_menu.html
@@ -41,7 +41,7 @@
 
         <div class="fold_line mt-4"></div>
 
-        <button class="flex gap-2 items-center reward_btn w-full my-4 px-2 py-1 rounded">
+        <button class="flex gap-2 items-center reward_btn w-full my-4 px-2 py-1 rounded" data-tw-toggle="modal" data-tw-target="#profile_reward-modal">
             <img class="w-12 h-12" src="/bcGame/dist/custom_img/refer.webp" alt="">
             <b class="font-extrabold">추천 그리고 보상</b>
         </button>
@@ -426,7 +426,7 @@
             </div>
 
             <div class="menu_list mt-1 bg-back rounded">
-                <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                <a href="javascript:;" class="flex items-center gap-5 h-full pl-4" data-tw-toggle="modal" data-tw-target="#profile_vip-modal">
                     <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_VipClub"></use></svg>
                     <span class="font-bold vip_text"><b class="text-[#FFBF39]">VIP</b> 클럽</span>
                 </a>
