--- a/casino/index.html
+++ b/casino/index.html
@@ -70,8 +70,8 @@
                                     <li class="swiper-slide"><a href="javascript:;" class="hover:opacity-80"><img src="/bcGame/dist/custom_img/main/main_visual5.avif" alt=""></a></li>
                                 </ul>
                                 <div class="swiper-pagination"></div>
-                                <div class="swiper-button-next rounded"><svg class="w-3 h-3 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></div>
-                                <div class="swiper-button-prev rounded"><svg class="w-3 h-3 fill-basic rotate-180"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></div>
+                                <div class="swiper-button-next rounded mo_hide"><svg class="w-3 h-3 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></div>
+                                <div class="swiper-button-prev rounded mo_hide"><svg class="w-3 h-3 fill-basic rotate-180"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></div>
                             </div>
                         </div>
                     </div>
@@ -3235,10 +3235,120 @@
                         <div>
                             <div  class="text-xl text-tit font-medium">최신 베팅&레이스</div>
                                                         
-                            <ul class="nav nav-tabs type02" role="tablist">
-                                <li id="batting-1-tab" class="nav-item flex-1" role="presentation"> <button class="nav-link w-full py-2 active" data-tw-toggle="pill" data-tw-target="#batting-tab-1" type="button" role="tab" aria-controls="batting-tab-1" aria-selected="true"> batting Tab 1 </button> </li>
-                                <li id="batting-2-tab" class="nav-item flex-1" role="presentation"> <button class="nav-link w-full py-2" data-tw-toggle="pill" data-tw-target="#batting-tab-2" type="button" role="tab" aria-controls="batting-tab-2" aria-selected="false"> Example Tab 2 </button> </li>
+                            <ul class="nav nav-boxed-tabs !w-auto mt-2" role="tablist">
+                                <li id="batting-1-tab" class="nav-item bg-sponsor rounded-l overflow-hidden" role="presentation"> 
+                                    <button class="w-24 sm:w-40 h-14 active" data-tw-toggle="pill" data-tw-target="#batting-tab-1" type="button" role="tab" aria-controls="batting-tab-1" aria-selected="true"> 최근베팅 </button> 
+                                </li>
+                                <li id="batting-2-tab" class="nav-item bg-sponsor " role="presentation"> 
+                                    <button class="w-24 sm:w-40 h-14" data-tw-toggle="pill" data-tw-target="#batting-tab-2" type="button" role="tab" aria-controls="batting-tab-2" aria-selected="false"> 하이롤러 </button> 
+                                </li>
+                                <li id="batting-3-tab" class="nav-item bg-sponsor rounded-r overflow-hidden" role="presentation"> 
+                                    <button class="w-24 sm:w-40 h-14" data-tw-toggle="pill" data-tw-target="#batting-tab-3" type="button" role="tab" aria-controls="batting-tab-3" aria-selected="false"> 롤링 대회 </button> 
+                                </li>
                             </ul>
+
+                            <div class="tab-content mt-5 bg-sponsor p-5">
+                                <div id="batting-tab-1" class="tab-pane leading-relaxed active" role="tabpanel" aria-labelledby="batting-1-tab">
+                                    <div class="overflow-x-auto scrollbar_x">
+                                        <table class="table table-hover noline mo_pad-s rounded min-w-[580px]">
+                                            <thead class="text-center">
+                                                <tr>
+                                                    <th class="whitespace-nowrap text-left">게임</th>
+                                                    <th class="whitespace-nowrap ">플레이어</th>
+                                                    <th class="whitespace-nowrap">베팅금액</th>
+                                                    <th class="whitespace-nowrap">배당</th>
+                                                    <th class="whitespace-nowrap text-right">혜택 금액</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody class="font-extrabold text-center cursor-pointer">
+                                                <tr>
+                                                    <td class="text-left"><img class="inline-flex mr-1 w-6" src="/bcGame/dist/custom_img/game/BlackJack.webp" /> TREASURE RAIDERS</td>
+                                                    <td><b class="text-tit font-extrabold" data-tw-toggle="modal" data-tw-target="#profile_info-modal">StayHigh</b></td>
+                                                    <td><b class="text-tit">₩260</b><img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/BCD.webp" /></td>
+                                                    <td>0.00x</td>
+                                                    <td class="text-right text-danger">-₩208<img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/BCD.webp" /></td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="text-left"><img class="inline-flex mr-1 w-6" src="/bcGame/dist/custom_img/game/Limbo.webp" /> Limbo</td>
+                                                    <td><b class="font-extrabold"><svg class="inline-flex w-3.5 h-3.5 mb-0.5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Hidden"></use></svg> 숨기기</b></td>
+                                                    <td><b class="text-tit">₩83</b><img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/IDR.webp" /></td>
+                                                    <td>0.00x</td>
+                                                    <td class="text-right text-danger">-₩83<img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/IDR.webp" /></td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="text-left"><img class="inline-flex mr-1 w-6" src="/bcGame/dist/custom_img/game/Plinko.webp" /> Plinko</td>
+                                                    <td><b class="text-tit font-extrabold" data-tw-toggle="modal" data-tw-target="#profile_info-modal">M■■</b></td>
+                                                    <td><b class="text-tit">₩1,561</b><img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/INR.webp" /></td>
+                                                    <td>0.13x</td>
+                                                    <td class="text-right text-danger">-₩1,561<img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/INR.webp" /></td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="text-left"><img class="inline-flex mr-1 w-6" src="/bcGame/dist/custom_img/game/UltimateDice.webp" /> UltimateDice</td>
+                                                    <td><b class="text-tit font-extrabold" data-tw-toggle="modal" data-tw-target="#profile_info-modal">Aigeccrplyb</b></td>
+                                                    <td><b class="text-tit">₩132</b><img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/BRL.webp" /></td>
+                                                    <td>1.00x</td>
+                                                    <td class="text-right text-danger">-₩132<img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/BRL.webp" /></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <button class="btn h-8 flex px-4 mt-4 mx-auto items-center justify-center border-none bg-back gap-2">
+                                        <span>더 보기</span>
+                                        <i><svg class="w-3.5 h-3.5 fill-basic rotate-90"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></i>
+                                    </button>
+                                </div>
+                                <div id="batting-tab-2" class="tab-pane leading-relaxed" role="tabpanel" aria-labelledby="batting-2-tab">
+                                    <div class="overflow-x-auto scrollbar_x">
+                                        <table class="table table-hover noline mo_pad-s rounded min-w-[580px]">
+                                            <thead class="text-center">
+                                                <tr>
+                                                    <th class="whitespace-nowrap text-left">게임</th>
+                                                    <th class="whitespace-nowrap ">플레이어</th>
+                                                    <th class="whitespace-nowrap">베팅금액</th>
+                                                    <th class="whitespace-nowrap">배당</th>
+                                                    <th class="whitespace-nowrap text-right">혜택 금액</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody class="font-extrabold text-center cursor-pointer">
+                                                <tr>
+                                                    <td class="text-left"><img class="inline-flex mr-1 w-6" src="/bcGame/dist/custom_img/game/Plinko.webp" /> Plinko</td>
+                                                    <td><b class="text-tit font-extrabold" data-tw-toggle="modal" data-tw-target="#profile_info-modal">M■■</b></td>
+                                                    <td><b class="text-tit">₩1,561</b><img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/INR.webp" /></td>
+                                                    <td>0.13x</td>
+                                                    <td class="text-right text-danger">-₩1,561<img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/INR.webp" /></td>
+                                                </tr>
+
+                                                <tr>
+                                                    <td class="text-left"><img class="inline-flex mr-1 w-6" src="/bcGame/dist/custom_img/game/Limbo.webp" /> Limbo</td>
+                                                    <td><b class="font-extrabold"><svg class="inline-flex w-3.5 h-3.5 mb-0.5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Hidden"></use></svg> 숨기기</b></td>
+                                                    <td><b class="text-tit">₩83</b><img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/IDR.webp" /></td>
+                                                    <td>0.00x</td>
+                                                    <td class="text-right text-danger">-₩83<img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/IDR.webp" /></td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="text-left"><img class="inline-flex mr-1 w-6" src="/bcGame/dist/custom_img/game/UltimateDice.webp" /> UltimateDice</td>
+                                                    <td><b class="text-tit font-extrabold" data-tw-toggle="modal" data-tw-target="#profile_info-modal">Aigeccrplyb</b></td>
+                                                    <td><b class="text-tit">₩132</b><img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/BRL.webp" /></td>
+                                                    <td>1.00x</td>
+                                                    <td class="text-right text-danger">-₩132<img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/BRL.webp" /></td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="text-left"><img class="inline-flex mr-1 w-6" src="/bcGame/dist/custom_img/game/BlackJack.webp" /> TREASURE RAIDERS</td>
+                                                    <td><b class="text-tit font-extrabold" data-tw-toggle="modal" data-tw-target="#profile_info-modal">StayHigh</b></td>
+                                                    <td><b class="text-tit">₩260</b><img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/BCD.webp" /></td>
+                                                    <td>0.00x</td>
+                                                    <td class="text-right text-danger">-₩208<img class="inline-flex w-5 ml-1" src="/bcGame/dist/custom_img/coin/BCD.webp" /></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                    <button class="btn h-8 flex px-4 mt-4 mx-auto items-center justify-center border-none bg-back gap-2">
+                                        <span>더 보기</span>
+                                        <i><svg class="w-3.5 h-3.5 fill-basic rotate-90"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Arrow"></use></svg></i>
+                                    </button>
+                                </div>
+                                <div id="batting-tab-3" class="tab-pane leading-relaxed" role="tabpanel" aria-labelledby="batting-3-tab"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). </div>
+                            </div>
                         </div>
 
                     </div>
