카지노 메인 + 검색창(pc)

--- a/_left_menu.html
+++ b/_left_menu.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="menu-hover_wrap">
                         <div class="menu_list bg-back flex items-center justify-between">
-                            <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                            <a href="/bcGame/casino/index.html?casino-8-tab" class="flex items-center gap-5 h-full pl-4">
                                 <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_ClassicDice"></use></svg>
                                 <span class="font-medium">BC 브랜드</span>
                             </a>
