--- a/casino/slots.html
+++ b/casino/slots.html
@@ -26,7 +26,7 @@
         <!--  ** 사이드 메뉴 끝 ** -->
 
         <!--  ** 메인 보드 시작 ** -->
-        <div class="content">
+        <div class="content casino">
             <!-- ** 페이지 로딩 ** -->
             <div id="loadingContainer">
                 <svg width="25" viewBox="0 0 120 30" xmlns="http://www.w3.org/2000/svg" fill="#3BC117" class="w-12 h-12">
