bc독점-데일리콘테스트 완료, 글로벌세팅 진행중

--- a/casino/index.html
+++ b/casino/index.html
@@ -8258,7 +8258,7 @@
                             <p class="text-tit font-extrabold text-base">롤</p>
                             <button class="basic-hover ml-8" data-tw-dismiss="modal"><svg class="w-4 h-4 close_btn cursor-pointer hover:-rotate-90 duration-500 transition-all"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Close"></use></svg></button>
                         </div>
-                        <div class="p-4 py-6">
+                        <div class="p-4 py-6 max-h-[660px] overflow-y-auto scrollbar">
                             <div class="text-base font-bold">규칙-데일리 롤링 대회</div>
                             <div class="text-sub">2023. 12. 3. ~ 2023. 12. 4.</div>
                             <div class="mt-2 text-xs">
