글로벌 세팅 완료

--- a/_top_bar.html
+++ b/_top_bar.html
@@ -237,7 +237,7 @@
                                 <svg class="w-5 h-5 mr-2"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_UserProfile"></use></svg>
                                 <span>나의 프로필</span>
                             </a></li>
-                            <li><a href="javascript:;" class="flex items-center pl-2.5 h-10 basic-hover">
+                            <li><a href="/bcGame/global_setting.html" class="flex items-center pl-2.5 h-10 basic-hover">
                                 <svg class="w-5 h-5 mr-2"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Setting"></use></svg>
                                 <span>글로벌 세팅</span>
                             </a></li>
