거래, 선물 거래, 빙고 페이지 완료

--- a/_top_bar.html
+++ b/_top_bar.html
@@ -5,6 +5,9 @@
             <a class="block px-4 py-2" href="javascript:;"><img class="w-6" src="/bcGame/dist/custom_img/logo_small.webp" alt=""></a>
         </div>
         <div class="left flex">
+            <div class="trading_logo">
+                <a href="/bcGame/index.html" class="top_logo"><img alt="logo" class="h-10" src="/bcGame/dist/custom_img/logo.webp"></a>
+            </div>
             <a href="/bcGame/casino/index.html" class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic casino_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Casino"></use></svg> 카지노</a>
             <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic sports_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Sports"></use></svg> 스포츠</button>
             <button class="btn btn-top h-11 px-5"><svg class="w-5 h-5 mr-2 fill-basic horse_i"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Horse"></use></svg> 레이싱</button>
