--- a/_left_menu.html
+++ b/_left_menu.html
@@ -399,16 +399,16 @@
                 </a>
             </div>
 
-            <div class="menu_list mt-1 bg-back rounded-t">
-                <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+            <div class="menu_list mt-1 bg-back rounded">
+                <a href="/bcGame/trading.html" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5 fill-basic" version="1.1" xmlns="http://www.w3.org/2000/svg" width="29" height="32" viewBox="0 0 29 32"><path d="M4.831 6.955c0-0.337-0.273-0.61-0.61-0.61h-0.277c-0.337 0-0.61 0.273-0.61 0.61v2.977c0 0.337-0.273 0.61-0.61 0.61h-2.115c-0.337 0-0.61 0.273-0.61 0.61v14.991c0 0.337 0.273 0.61 0.61 0.61h2.115c0.337 0 0.61 0.273 0.61 0.61v2.977c0 0.337 0.273 0.61 0.61 0.61h0.277c0.337 0 0.61-0.273 0.61-0.61v-2.977c0-0.337 0.273-0.61 0.61-0.61h2.115c0.337 0 0.61-0.273 0.61-0.61v-14.991c0-0.337-0.273-0.61-0.61-0.61h-2.115c-0.337 0-0.61-0.273-0.61-0.61v-2.977z"></path><path d="M14.502 4.048c0-0.337-0.273-0.61-0.61-0.61h-0.277c-0.337 0-0.61 0.273-0.61 0.61v2.977c0 0.337-0.273 0.61-0.61 0.61h-2.115c-0.337 0-0.61 0.273-0.61 0.61v14.991c0 0.337 0.273 0.61 0.61 0.61h2.115c0.337 0 0.61 0.273 0.61 0.61v2.977c0 0.337 0.273 0.61 0.61 0.61h0.277c0.337 0 0.61-0.273 0.61-0.61v-2.977c0-0.337 0.273-0.61 0.61-0.61h2.115c0.337 0 0.61-0.273 0.61-0.61v-14.992c0-0.337-0.273-0.61-0.61-0.61h-2.115c-0.337 0-0.61-0.273-0.61-0.61v-2.977z"></path><path d="M24.175 0.61c0-0.337-0.273-0.61-0.61-0.61h-0.277c-0.337 0-0.61 0.273-0.61 0.61v2.977c0 0.337-0.273 0.61-0.61 0.61h-2.115c-0.337 0-0.61 0.273-0.61 0.61v14.991c0 0.337 0.273 0.61 0.61 0.61h2.115c0.337 0 0.61 0.273 0.61 0.61v2.977c0 0.337 0.273 0.61 0.61 0.61h0.277c0.337 0 0.61-0.273 0.61-0.61v-2.977c0-0.337 0.273-0.61 0.61-0.61h2.115c0.337 0 0.61-0.273 0.61-0.61v-14.992c0-0.337-0.273-0.61-0.61-0.61h-2.115c-0.337 0-0.61-0.273-0.61-0.61v-2.977z"></path></svg>
                     <span class="font-medium">거래</span>
                 </a>
             </div>
-            <div class="menu_list bg-back rounded-b">
-                <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+            <div class="menu_list mt-1 bg-back rounded">
+                <a href="/bcGame/trading_contract.html" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5 fill-basic" version="1.1" xmlns="http://www.w3.org/2000/svg" width="1024" height="1024" viewBox="0 0 1024 1024"><title></title><g id="icomoon-ignore"></g><path d="M721.001 168.252c8.491 6.244 14.981 14.984 18.694 25.14l126.843 344.678 82.893 0.048c13.879 0 27.227 5.827 37.065 16.107 9.797 10.322 15.349 24.309 15.349 38.876s-5.511 28.595-15.349 38.918c-9.838 10.322-23.186 16.107-37.065 16.107l-102.194 0.079c-12.276 3.998-25.896 3.223-38.025-2.826-6.453-3.218-12.191-7.752-16.859-13.32-4.426-5.243-7.846-11.282-10.088-17.803 0.041-0.108-0.003-0.217-0.046-0.327-0.108-0.119-0.255-0.566-0.398-1.017l-94.703-256.692-199.119 469.010c-1.442 5.544-3.721 10.899-6.822 15.861-4.733 7.537-11.227 13.759-18.9 18.106-7.282 4.123-15.433 6.373-23.748 6.563l-1.697 0.013-6.133-0.405-5.335-1.074c-0.215-0.054-0.432-0.108-0.645-0.165l5.98 1.239c-12.25-1.548-23.647-7.471-32.102-16.827-6.537-7.198-11.021-15.966-13.11-25.371l-115.583-285.323-39.732 80.39c-4.409 8.991-11.063 16.525-19.267 21.769-8.164 5.286-17.633 8.075-27.227 8.117h-109.113c-13.879 0-27.227-5.827-37.065-16.107-9.874-10.434-15.379-24.378-15.349-38.876 0-14.61 5.511-28.595 15.349-38.918s23.186-16.107 37.065-16.107h77.069l76.252-153.84c2.937-6.73 7.172-12.788 12.45-17.814 10.563-9.976 24.703-15.053 39.065-14.027 7.062 0.541 13.961 2.58 20.247 6.036 6.287 3.414 11.838 8.158 16.33 13.902 5.81 7.397 9.612 16.107 11.166 25.275l110.995 274.313 204.729-481.108c4.245-9.989 11.185-18.356 19.961-24.183 17.836-11.819 40.975-11.189 58.169 1.58z"></path></svg>
-                    <span class="font-medium">Futures</span>
+                    <span class="font-medium">선물 거래</span>
                 </a>
             </div>
 
@@ -419,7 +419,7 @@
                 </a>
             </div>
             <div class="menu_list mt-1 bg-back rounded">
-                <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                <a href="/bcGame/bingolist.html" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Bingo2"></use></svg>
                     <span class="font-medium">빙고</span>
                 </a>
