로그아웃시 보너스 페이지 진행중 , 스핀/퀘스트 모달 완료

--- a/_left_menu.html
+++ b/_left_menu.html
@@ -20,13 +20,13 @@
             </div>
             <div class="flex w-full gap-1.5 mt-2 quest_box">
                 <div class="menu_list quest w-1/2 bg-back rounded">
-                    <a href="javascript:;" class="flex items-center gap-1 h-full pl-2">
+                    <a href="javascript:;" class="flex items-center gap-1 h-full pl-2" data-tw-toggle="modal" data-tw-target="#left_quest-modal">
                         <img class="w-10 h-10" src="/bcGame/dist/custom_img/quest_icon.webp" alt="">
                         <span class="text-xs font-semibold">퀘스트</span>
                     </a>
                 </div>
                 <div class="menu_list spin w-1/2 bg-back rounded">
-                    <a href="javascript:;" class="flex items-center gap-1 h-full pl-2">
+                    <a href="javascript:;" class="flex items-center gap-1 h-full pl-2" data-tw-toggle="modal" data-tw-target="#left_spin-modal">
                         <div class="spin-anim">
                             <img class="img-spinbg" src="/bcGame/dist/custom_img/spin_bg.webp" alt="">
                             <img class="img-turntable" src="/bcGame/dist/custom_img/turntable.webp" alt="">
