보너스 완료

--- a/bonus_logout.html
+++ b/bonus_logout.html
@@ -173,13 +173,13 @@
                     </div>
 
 
-                    <div class="mt-4 p-10 bonus_cashback">
+                    <div class="mt-4 p-4 md:p-10 bonus_cashback">
                         <div class="relative flex items-center md:flex-row flex-col gap-1 ">
                             <div class="flex items-center justify-center w-full md:w-3/5">
-                                <img class="w-[110%] max-w-[110%]" src="/bcGame/dist/custom_img/bonus/cashback.webp" alt="">
+                                <img class="lg:w-[110%] max-w-[110%]" src="/bcGame/dist/custom_img/bonus/cashback.webp" alt="">
                             </div>
                             <div class="w-full md:w-2/5 md:text-left text-center -mt-20">
-                                <h5 class="text-tit text-lg md:text-2xl font-extrabold">BC게임의 충전 캐쉬백 소개</h5>
+                                <h5 class="text-tit text-lg md:text-2xl font-extrabold">BC게임의 <b class="text-yellow">충전</b> 캐쉬백 소개</h5>
                                 <p class="mt-4 mb-3 md:my-8 font-semibold">힘이 당신의 손에 있는 짜릿한 Recharge의 세계에 빠져보세요. BC.GAME에 가입하고 보상을 맞춤화하세요.</p>
                                 <a class="text-primary" data-tw-toggle="modal" data-tw-target="#login_join_modal" onclick="ModalTab('login_join_modal','join_box')">
                                     지금 BC.GAME에 가입하세요
@@ -187,40 +187,72 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="relative z-20 w-full flex flex-col md:flex-row items-center -mt-32 cashback_box px-1 xl:py-0 py-3 border border-slate-300 border-opacity-50 rounded-lg">
-                            <div class="relative w-full md:w-1/3 flex flex-row md:flex-col xl:flex-row items-center gap-4 px-4">
-                                <i class="absolute right-0 top-1/2 w-[1px] h-1/2 -translate-y-1/2 bg-slate-300"></i>
-                                <div class="relative flex items-center justify-center w-32 h-full xl:py-8">
+                        <div class="relative z-20 w-full flex flex-col md:flex-row items-center mt-4 md:-mt-8 lg:-mt-32 cashback_box px-4 md:px-1 xl:py-0 py-3 border border-slate-300 border-opacity-50 rounded-lg ">
+                            <div class="relative w-full md:w-1/3 flex flex-row md:flex-col xl:flex-row items-center gap-4 px-4 md:py-0 py-3">
+                                <i class="absolute right-0 bottom-0 md:top-1/2 w-full md:w-[1px] h-[1px] md:h-1/2 md:-translate-y-1/2 bg-slate-300"></i>
+                                <div class="relative flex items-center justify-center w-20 md:w-32 h-full xl:py-8">
                                     <div class="cashback_bg_1 absolute left-0 top-0 w-full h-full"></div>
                                     <img class="relative z-10 w-2/3 xl:w-1/2" src="/bcGame/dist/custom_img/bonus/cashback1.webp" alt="">
                                 </div>
-                                <div class="flex-1 xl:text-left text-center ">
+                                <div class="flex-1 xl:text-left md:text-center text-left">
                                     <h6 class="text-base font-semibold text-tit">재충전 활성화</h6>
                                     <p class="text-xs mt-2">VIP 레벨 22 이상에 도달하기 위해 노력하면서 재충전 활성화를 향한 여정.</p>
                                 </div>
                             </div>
-                            <div class="relative w-full md:w-1/3 flex flex-row md:flex-col xl:flex-row items-center gap-4 px-4">
-                                <i class="absolute right-0 top-1/2 w-[1px] h-1/2 -translate-y-1/2 bg-slate-300"></i>
-                                <div class="relative flex items-center justify-center w-32 h-full xl:py-8">
+                            <div class="relative w-full md:w-1/3 flex flex-row md:flex-col xl:flex-row items-center gap-4 px-4 md:py-0 py-3">
+                                <i class="absolute right-0 bottom-0 md:top-1/2 w-full md:w-[1px] h-[1px] md:h-1/2 md:-translate-y-1/2 bg-slate-300"></i>
+                                <div class="relative flex items-center justify-center w-20 md:w-32 h-full xl:py-8">
                                     <div class="cashback_bg_2 absolute left-0 top-0 w-full h-full"></div>
                                     <img class="relative z-10 w-2/3 xl:w-1/2" src="/bcGame/dist/custom_img/bonus/cashback2.webp" alt="">
                                 </div>
-                                <div class="flex-1 xl:text-left text-center ">
+                                <div class="flex-1 xl:text-left md:text-center text-left">
                                     <h6 class="text-base font-semibold text-tit">원하는 속도로 재충전하세요</h6>
                                     <p class="text-xs mt-2">10분마다, 매시간 또는 매일 보너스를 청구하세요</p>
                                 </div>
                             </div>
-                            <div class="w-full md:w-1/3 flex flex-row md:flex-col xl:flex-row items-center gap-4 px-4">
-                                <div class="relative flex items-center justify-center w-32 h-full xl:py-8">
+                            <div class="w-full md:w-1/3 flex flex-row md:flex-col xl:flex-row items-center gap-4 px-4 md:py-0 py-3">
+                                <div class="relative flex items-center justify-center w-20 md:w-32 h-full xl:py-8">
                                     <div class="cashback_bg_3 absolute left-0 top-0 w-full h-full"></div>
                                     <img class="relative z-10 w-2/3 xl:w-1/2" src="/bcGame/dist/custom_img/bonus/cashback3.webp" alt="">
                                 </div>
-                                <div class="flex-1 xl:text-left text-center ">
+                                <div class="flex-1 xl:text-left md:text-center text-left">
                                     <h6 class="text-base font-semibold text-tit">충전 보상 등급</h6>
                                     <p class="text-xs mt-2">내기를 걸고 1단계에서 4단계로 올라갈 때 보상을 눈덩이처럼 굴리세요</p>
                                 </div>
                             </div>
                         </div>
+                    </div>
+
+                    <div class="py-12 bonus_benefit">
+                        <div class="text-center text-tit font-extrabold text-lg md:text-2xl">기다리다. <b class="text-yellow">더 많은</b> 혜택이 있습니다!</div>
+                        <div class="flex items-center justify-between flex-col md:flex-row md:gap-0 gap-5 mt-4">
+                            <div class="w-full md:w-1/3 text-center px-5 border-r border-slate-300 border-opacity-40">
+                                <div class="relative bg_1">
+                                    <img class="relative z-10 w-1/2 md:w-2/3 mx-auto " src="/bcGame/dist/custom_img/bonus/benefit1.webp" alt="">
+                                </div>
+                                <h6 class="mt-2 text-lg md:text-xl text-tit font-extrabold">놀라운 보상을 위해 코코를 잡아라!</h6>
+                                <p class="mt-5 md:text-sm text-xs">페이지에서 6시간마다 지나가는 COCO 거미를 잡고 VIP 레벨에 따라 독점 BCD/Fiat 보상을 받으세요.</p>
+                            </div>
+                            <div class="w-full md:w-1/3 text-center px-5 border-r border-slate-300 border-opacity-40">
+                                <div class="relative bg_2">
+                                    <img class="relative z-10 w-1/2 md:w-2/3 mx-auto " src="/bcGame/dist/custom_img/bonus/benefit2.webp" alt="">
+                                </div>
+                                <h6 class="mt-2 text-lg md:text-xl text-tit font-extrabold">BC.GAME 복권으로 승리</h6>
+                                <p class="mt-5 md:text-sm text-xs">증명할 수 있는 공정한 게임을 경험하고 행운의 숫자가 마술처럼 작동하도록 하십시오. 기다리지 말고 뛰어들어 행운을 시험해보세요!</p>
+                            </div>
+                            <div class="w-full md:w-1/3 text-center px-5">
+                                <div class="relative bg_3">
+                                    <img class="relative z-10 w-1/2 md:w-2/3 mx-auto " src="/bcGame/dist/custom_img/bonus/benefit3.webp" alt="">
+                                </div>
+                                <h6 class="mt-2 text-lg md:text-xl text-tit font-extrabold">COIN-DROP 및 CHAT RAIN 대기</h6>
+                                <p class="mt-5 md:text-sm text-xs">Constant Chat Rains 및 Coin-Drops를 사용하여 참여하고, 채팅하고, 자발적인 보상을 획득하세요. 활발하고 빠르게 활동하고 무료 코인을 받으세요.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="relative mb-10 text-center dark:bg-[#2b2d33] bg-white py-20 bonus_bottom overflow-hidden">
+                        <p class="relative z-10 text-tit text-lg md:text-2xl font-extrabold break-keep">가장 고급스러운 게임 경험을 제공하게 된 것을 자랑스럽게 생각합니다.</p>
+                        <button class="btn-green relative z-10 w-72 h-14 mt-8 font-extrabold">즉시 가입</button>
                     </div>
 
 
