공정성 진행중

--- a/_left_menu.html
+++ b/_left_menu.html
@@ -13,7 +13,7 @@
     <div class="menu_box px-3 py-6 text-basic">
         <div class="bonus_menu p-2 rounded">
             <div class="menu_list bg-back rounded">
-                <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
+                <a href="/bcGame/bonus.html" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Gift"></use></svg>
                     <span class="font-medium">보너스</span>
                 </a>
@@ -470,7 +470,7 @@
             <div class="menu_list bg-back">
                 <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Forum"></use></svg>
-                    <span class="font-medium">포럼</span>
+                    <span class="font-medium">포럼 <svg class="inline-flex w-3 h-3 fill-basic opacity-50"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_NewWindow"></use></svg></span>
                 </a>
             </div>
             <div class="menu_list bg-back">
@@ -482,7 +482,7 @@
             <div class="menu_list bg-back rounded-b">
                 <a href="javascript:;" class="flex items-center gap-5 h-full pl-4">
                     <svg class="w-5 h-5 fill-basic"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_Blog"></use></svg>
-                    <span class="font-medium">블로그</span>
+                    <span class="font-medium">블로그 <svg class="inline-flex w-3 h-3 fill-basic opacity-50"><use xlink:href="/bcGame/dist/custom_img/symbol-defs.svg#icon_NewWindow"></use></svg></span>
                 </a>
             </div>
 
